--- a/repos/ECLP/02-eventhandler.html
+++ b/repos/ECLP/02-eventhandler.html
@@ -175,7 +175,7 @@ namespace ConsoleApp1
                       </pre>
                     </p>
 
-                    <button type="button" class="btn btn-primary" >End :)</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location = '03-parse.html'">Next Chapter 03. Parse>></button>
                   </div>
                   
                 </div>
@@ -186,6 +186,7 @@ namespace ConsoleApp1
                 <p><a href="description.html">Description</a></p>
                 <p><a href="01-verbs.html">01. Verbs</a></p>
                 <p><b>>>02. EventHandler</b></p>
+                <p><a href="03-parse.html">03. Parse</a></p>
               </div>
               <!----End Summary---->
             </div>
