--- a/repos/ECLP/description.html
+++ b/repos/ECLP/description.html
@@ -88,8 +88,8 @@
                     <p>This command Line parser use 2 ways of parsing.</p>
                     <p>Either from a string command or from an array like the one passed to the main method as parameters.</p>
                     <p>just reference ECLP by nuget or by dowloading the latest release and add it to your references.</p>
-                    <p>Install-Package ECLP -Version 1.4.0</p>
-                    <p><a href="https://www.nuget.org/packages/ECLP/1.4.0">Nuget</a></p>
+                    <p>Install-Package ECLP -Version 1.4.2</p>
+                    <p><a href="https://www.nuget.org/packages/ECLP/1.4.2">Nuget</a></p>
                     <p><a href="https://github.com/melharfi/ECLP/releases">Release</a></p>
                     <p>Licensed with <a href="http://choosealicense.com/licenses/mit">MIT</a></p>
                     <p><b><li>Verbs</li></b></p>
@@ -127,7 +127,7 @@
                 <p><b>>>Description</b></p>
                 <p><a href="01-verbs.html">01. Verbs</a></p>
                 <p><a href="02-eventhandler.html">01. EventHandler</a></p>
-
+                <p><a href="03-parse.html">03. Parse</a></p>
               </div>
               <!----End Summary---->
             </div>
