some syntaxe fix

--- a/repos/ECLP/02-eventhandler.html
+++ b/repos/ECLP/02-eventhandler.html
@@ -23,8 +23,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="index.html">HOME</a>
-                    <a class="nav-item nav-link" href="repos.html"><b>REPOS</b></a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/index.html">HOME</a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/repos.html"><b>REPOS</b></a>
                   </div>
                 </div>
               </nav>
@@ -90,9 +90,9 @@
                   <div class="repos-content-sub">
                     <p><b><h3>02. EventHandler</h3></b></p>
                     <p>In the previouse chapter you have seen a way to read arguments by fetching them one by one.</p>
-                    <p>This approach could be expensive especially when you have many argument as you my see the code in the prevouse chapter with manu loops.</p>
+                    <p>This approach could be expensive especially when you have many argument as you my see the code in the prevouse chapter with many loops.</p>
                     <p>So maybe we want to execute a code especially when an argument is set.</p>
-                    <p>This is what we are going to the with EventHandler.</p>
+                    <p>This is what we are going to do using EventHandler.</p>
 
                     <p>
                       <pre>
