--- a/repos/ECLP/01-verbs.html
+++ b/repos/ECLP/01-verbs.html
@@ -23,8 +23,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="index.html">HOME</a>
-                    <a class="nav-item nav-link" href="repos.html"><b>REPOS</b></a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/index.html">HOME</a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/repos.html"><b>REPOS</b></a>
                   </div>
                 </div>
               </nav>
@@ -114,12 +114,12 @@ namespace ConsoleApp1
                         </code>
                       </pre>
                     </p>
-                    <p>Assuming it's a console project, the <b>cr</b> contain 5 collections, each one is dedicated to a specific verb.</p>
+                    <p>Assuming it's a console project, the <b>cr</b> variable contain 5 collections, each one is dedicated to a specific verb.</p>
                     <p><img id="myImg1" class="myImg" src="assets/verbs.png" alt="" width="800" height="246" onclick="ShowModalImage('myImg1')"></p>
                     <br>
                     <p><b><li>Reading Verbs</li></b></p>
                     <b>Manually</b>
-                    <p>Here is a way to display all data by fetching them 1 by one</p>
+                    <p>Here is a way to display all data by fetching them one by one</p>
                     <p>
                       <pre>
                         <code class="csharp">
@@ -207,7 +207,7 @@ namespace ConsoleApp1
                     <p>You have to make your application ready to associate the first index for the username which will equal to <b>James</b></p>
                     <p>Second argument to his age which will equal to <b>29</b></p>
                     <p>Third for activated or not for example which will be false "suspended or wait activation or whatever"</p>
-                    <p>Fourth for a user rank, in this case is <b>a</b> that could be for <b>Admin</b>, you can image other scenarios like <b>m</b> for moderator ...</p>
+                    <p>Fourth for a user rank, in this case is <b>a</b> that could be for <b>Admin</b>, you can imagine other scenarios like <b>m</b> for moderator ...</p>
                     <p>
                       <pre>
                         <code class="csharp">
@@ -286,9 +286,9 @@ namespace ConsoleApp1
                     <p>If you remember i told you that it's better to keep Args verbs in the beginning of the command line.</p>
                     <p>Well it's not an obligation, assuming this command line :</p>
                     <p><b>"James 29 false <span style="color: red;">-p language=En</span> a"</b></p>
-                    <p>Well the 3 first arguments have the same positions as before, but we just add another verb as a property, and then followed by the last argument that had the <b>fourth</b> index and now changed to the <b>fifth</b>.</p>
-                    <p>Well it's not true, because index is only applied to the <b>Args</b> verbs, meaning that event if there's some verbs in the middle the order will be incremented depending of the position of the last Arg verb.</p>
-                    <p>So nothing will be changed in the last code we wrote because the '<b>a</b>' will always have the fourth index.</p>
+                    <p>As before we used same command line as but we just add another verb as a property before last argument.</p>
+                    <p>in this case the order is not affected by the none arg verb, i mean that the last argument "a" have the index of 3 not 4 (first argument have the 0 index) as you may expect, because the -p language=En is not accounted in the arguments's index.</p>
+                    <p>So nothing will be changed in the last code we wrote because the 'a' will always have the four index in total.</p>
                     <p>In the next chapter we will see another way to read the command using events.</p>
                     <button type="button" class="btn btn-primary" onclick="window.location = '02-eventhandler.html'">Next Chapter 02. EventHandler>></button>
                   </div>
