--- a/repos/ECLP/03-parse.html
+++ b/repos/ECLP/03-parse.html
@@ -23,8 +23,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="index.html">HOME</a>
-                    <a class="nav-item nav-link" href="repos.html"><b>REPOS</b></a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/index.html">HOME</a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/repos.html"><b>REPOS</b></a>
                   </div>
                 </div>
               </nav>
@@ -112,7 +112,7 @@ namespace ConsoleApp1
             CommandResult cr = eCLP.Parse();
             // or 
             // CommandResult cr = eCLP.Parse(true);
-            // is the same suing regex
+            // same
             Console.ReadKey();
         }
     }
@@ -121,7 +121,7 @@ namespace ConsoleApp1
                       </pre>
                     </p>
                     <p><b>Side by side words check</b></p>
-                    <p>Is another way of parsing more pertinant but use a long code.</p>
+                    <p>Is another way of parsing more pertinant but use a long code behind the scenes.</p>
                     <p>
                       <pre>
                         <code class="csharp">
