--- a/repos/MELHARFI-2D-Game-Engine/description.html
+++ b/repos/MELHARFI-2D-Game-Engine/description.html
@@ -19,8 +19,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="index.html">HOME</a>
-                    <a class="nav-item nav-link" href="repos.html"><b>REPOS</b></a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/index.html">HOME</a>
+                    <a class="nav-item nav-link" href="https://melharfi.github.io/index.html"><b>REPOS</b></a>
                   </div>
                 </div>
               </nav>
