add CheatCodeLite project

--- a/repos.html
+++ b/repos.html
@@ -231,6 +231,21 @@
                     <p>Pet's Editor</p>
                     <p>SpellEffect is made with C# in .Net Framework 4.5</p>
                   </div>
+
+                  <hr>
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><img src="https://raw.githubusercontent.com/melharfi/CheatCodeLite/main/resources/logo.ico" width="100" height="100"></p>
+                    <p><b><h3>CheatCodeLite</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/CheatCodeLite" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>CheatCodeLite allow you to trigger cheat codes in your game/application using .NET</p>
+                    <p>The keystrokes handler is not included in this library cause it really depend on the context where this library is used, most of time games use a third party to catch keystrokes not the one in the .Net Framework Class Library.</p>
+                    <p>CheatCodeLite is made with C# in .Net Standard 2.0</p>
+                  </div>
+
                 </div>
               </div>
             </div>
