--- a/repos.html
+++ b/repos.html
@@ -244,6 +244,7 @@
                     <p>CheatCodeLite allow you to trigger cheat codes in your game/application using .NET</p>
                     <p>The keystrokes handler is not included in this library cause it really depend on the context where this library is used, most of time games use a third party to catch keystrokes not the one in the .Net Framework Class Library.</p>
                     <p>CheatCodeLite is made with C# in .Net Standard 2.0</p>
+                    <button type="button" class="btn btn-primary" onclick="window.location = 'repos/CheatCodeLite/description.html'">See Wiki>></button>
                   </div>
 
                 </div>
