--- a/repos/MELHARFI-2D-Game-Engine/04-bmp.html
+++ b/repos/MELHARFI-2D-Game-Engine/04-bmp.html
@@ -127,7 +127,7 @@ namespace _2dProject
                       </pre>
                     </p>
 
-                    <p><img src="assets/ch3-cloud.png"></p>
+                    <p><img src="assets/ch3-cloud.PNG"></p>
                     <p>Obiously you can chage the Position as you want</p>
 
                     <p><b>ObjectLayer</b> Is the common asset like players, monsters... that come front of background (layer 2)</p>
