change order of repo by date

--- a/repos/MELHARFI-2D-Game-Engine/02-superposition.html
+++ b/repos/MELHARFI-2D-Game-Engine/02-superposition.html
@@ -131,8 +131,8 @@
                     <p>
                       <pre>
                         <code class="csharp">
-Bmp building = new (@"c:\building.jpg", new Point(0, 0), manager);
-Bmp cloud = new (@"c:\cloud.jpg", new Point(0, 0), manager);
+Bmp building = new Bmp(@"c:\building.jpg", new Point(0, 0), manager);
+Bmp cloud = new Bmp(@"c:\cloud.jpg", new Point(0, 0), manager);
 cloud.Zindex = building.Zndex - 1;
                         </code>
                       </pre>
