fix broen links

--- a/repos/Nova/description.html
+++ b/repos/Nova/description.html
@@ -85,7 +85,7 @@
                     <p><b><h3>NOVA RPG 2D game {Discontinued}.</h3></b></p>
                   </div>
                   <div class="repos-content-sub">
-                    <a href="https://github.com/melharfi/ECLP" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                    <a href="https://github.com/melharfi/Nova" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
                   </div>
                   <div class="repos-content-sub">
                     <p><b><h3>Description</h3></b></p>
