add ECLP.Net to repo page

--- a/repos.html
+++ b/repos.html
@@ -125,7 +125,7 @@
 
                   <div class="repos-content-job-title" style="color: darkcyan;">
                     <p><img src="https://raw.githubusercontent.com/melharfi/ECLP/master/resources/logo.png"></p>
-                    <p><b><h3>ECLP {Easy Command Line Parser}</h3></b></p>
+                    <p><b><h3>ECLP {Easy Command Line Parser} .Net Framework</h3></b></p>
                   </div>
                   <div class="repos-content-sub">
                     <a href="https://github.com/melharfi/ECLP" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
@@ -135,6 +135,21 @@
                     <p>ECLP defin 5 types of arguments as Verbs that you can uses.</p>
                     <p><b>Args, Flags, Properties, Collections, ExCollections</b></p>
                     <button type="button" class="btn btn-primary" onclick="window.location = 'repos/ECLP/description.html'">See Wiki>></button>
+                  </div>
+                  <hr>
+
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><img src="https://raw.githubusercontent.com/melharfi/ECLP/master/resources/logo.png"></p>
+                    <p><b><h3>ECLP {Easy Command Line Parser} .Net Standard</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/ECLP.Net" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>This CLP use 2 ways to parse a command, either from a command line string or from an array as the one passed as argument to the main function.</p>
+                    <p>ECLP.Net defin 5 types of arguments as Verbs that you can uses.</p>
+                    <p><b>Args, Flags, Properties, Collections, ExCollections</b></p>
+                    <button type="button" class="btn btn-primary" onclick="window.location = 'repos/ECLP.Net/description.html'">See Wiki>></button>
                   </div>
                   <hr>
 
