--- a/repos/ECLP.Net/01-verbs.html
+++ b/repos/ECLP.Net/01-verbs.html
@@ -81,7 +81,7 @@
                 <h2>Repos</h2>
                 <div class="repos-content">
                   <div class="repos-content-job-title" style="color: darkcyan;">
-                    <p><img src="https://raw.githubusercontent.com/melharfi/ECLP.Net/master/resources/logo.png"></p>
+                    <p><img src="https://raw.githubusercontent.com/melharfi/ECLP/master/resources/logo.png"></p>
                     <p><b><h3>ECLP.Net {Easy Command Line Parser}.</h3></b></p>
                   </div>
                   <div class="repos-content-sub">
