--- a/repos.html
+++ b/repos.html
@@ -140,7 +140,7 @@
 
                   <div class="repos-content-job-title" style="color: darkcyan;">
                     <p><img src="https://raw.githubusercontent.com/melharfi/ECLP/master/resources/logo.png"></p>
-                    <p><b><h3>ECLP {Easy Command Line Parser} .Net Standard</h3></b></p>
+                    <p><b><h3>ECLP.Net {Easy Command Line Parser} .Net Standard</h3></b></p>
                   </div>
                   <div class="repos-content-sub">
                     <a href="https://github.com/melharfi/ECLP.Net" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
