add VSAutoIncrementVersion project

--- a/repos.html
+++ b/repos.html
@@ -262,6 +262,19 @@
                     <p>SpellEffect is made with C# in .Net Framework 4.5</p>
                   </div>
 
+					<hr>
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><b><h3>VSAutoIncrementVersion</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/VSAutoIncrementVersion" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>VSAutoIncrementVersion </p>
+                    <p>Tool to auto increment version in Visual Studio.</p>
+                    <p>VSAutoIncrementVersion is made with C# in .Net Framework 4.5</p>
+                  </div>
+				  
                 </div>
               </div>
             </div>
