--- a/repos.html
+++ b/repos.html
@@ -271,7 +271,7 @@
                   </div>
                   <div class="repos-content-sub">
                     <p>VSAutoIncrementVersion </p>
-                    <p>Tool to auto increment version in Visual Studio.</p>
+                    <p>Tool to auto increment version in Visual Studio for local project.</p>
                     <p>VSAutoIncrementVersion is made with C# in .Net Framework 4.5</p>
                   </div>
 				  
