--- a/index.html
+++ b/index.html
@@ -79,27 +79,31 @@
                 <div class="about-content">
                   Hello, My Name Is Mohssine EL HARFI (often i use The-Morpher as Nickname) a lambda person living in Morocco, love coding especially in games environment or Desktop/Web application.
                   <div class="about-content-sub">
-                    My favorites languages is C# and ... well in reality i focused a couples of years coding around C# environment as Windows Forms App, Windows Desktop App, Libraries, ASP .Net Core 2 and 3, Visual studio features.  
+                    My favorites languages is C# and ... well in reality i focused a couples of years coding around C# environment as Windows Forms App, Windows Desktop App, Libraries, ASP .Net Core 2 and 3, Visual studio features annd arround .net echosystem.  
                   </div>
                   <div class="about-content-sub">
-                    Over the time i lose hand over some technologies like PHP, Html, CSS, Javascript, C++ that i don't use them often.
+                    Over the time i lose hand over some technologies like PHP, C++, VB that i don't use them often.
                   </div>
                   <div class="about-content-sub">
                     Almost all of my project is shared here under MIT Licence, apart some private ones for commercial purpose.
                   </div>
-                  <div class="about-content-sub">
-                    Programming does not take a big place in my job as it does not require it, i use it for personal hobbies and learning subject.<br>
-                  </div>
                   <div class="about-content-job-title" style="color: darkcyan;">
-                    My Job
+                    My Job "Developper"
                   </div>
                   <div class="about-content-job">
-                    I work as IT in hospitality environment since 2009, most of skills needed :<br>
-                    Network knowledge.<br>
-                    Router/Switch L2/L3 supervising/configuring.<br>
+                    I work as Developper in hospitality environment since 2009, most of skills needed :<br>
+                    Software developpement.<br>
+					Softeware Architecture.<br>
+					Storage, Database, logging.<br>
+					Technical concerns.<br>
+					Deployement, versionning, testing.<br>
+				  <div class="about-content-job-title" style="color: darkcyan;">
+                    Parallel Job/Knownledge : "IT"
+                  </div>
+                    Router/Switch L1/L2/L3 supervising/configuring.<br>
                     Sharing devcies, printers, files and users permissions.<br>
                     Outlook, Office 2008 support.<br>
-                    POS support, Micros, OPERA Fidelio, HotSOS, Vingcard, SpaSoft.<br>
+                    POS support, Micros, OPERA Fidelio, HotSOS, Vingcard, SpaSoft, AudioCodes, Avaya.<br>
                     Windows 7, 10, 2013 server, 2015 server, 2018 server, 2019 server, Unix/Ubuntu.<br>
                     Wiring and Wifi support.
                   </div>
@@ -118,6 +122,12 @@
                   <div class="about-content-hobbies">
                     Moding games.
                   </div>
+				  <div class="about-content-hobbies">
+                    Reverse engeenering win 32/64 apps using OllyDbg, dbg64, Hex editor.
+                  </div>
+				  <div class="about-content-hobbies">
+                    Web security, analysis, auditing.
+                  </div>
                 </div>
                 <!----Contact Me---->
                   <button type="button" class="btn btn-primary" onclick="myFunction()">Contact me>></button>
@@ -127,6 +137,9 @@
                     </div>
                     <div class="about-content-hobbies">
                       <i class="fa fa-discord" aria-hidden="true"></i>Discord : the-morpher#6058
+                    </div>
+					<div class="about-content-hobbies">
+                      <i class="fa fa-skype" aria-hidden="true"></i>Skype : https://join.skype.com/invite/LTk2DtwBXMW0
                     </div>
                   </div>
                 <!----End Contact me---->
@@ -140,76 +153,124 @@
                     100%
                   </div>
                 </div>
+				<p>.Net</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 100%;">
+                    100%
+                  </div>
+                </div>
+				<p>.net Core</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 100%;">
+                    100%
+                  </div>
+                </div>
+				<p>SqlServer / EntityFramework</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 60%;">
+                    60%
+                  </div>
+                </div>
+				<p>.NoSql (MongoDb, RavenDb)</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 80%;">
+                    80%
+                  </div>
+                </div>
+				<p>Architecture {Microservices, Rest, CQRS, Event sourcing, MVC, DDD}</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 100%;">
+                    100%
+                  </div>
+                </div>
                 <p>UI Design</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 60%;">
-                    ~60%
+                    60%
+                  </div>
+                </div>
+				<p>Angular</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 100%;">
+                    100%
                   </div>
                 </div>
                 <p>Php</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 20%;">
-                    ~20%
+                    20%
                   </div>
                 </div>
                 <p>Javascript</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 10%;">
-                    ~10%
+                  <div class="progress-bar" style="width: 60%;">
+                    60%
+                  </div>
+                </div>
+				<p>Typescript</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 100%;">
+                    100%
                   </div>
                 </div>
                 <p>HTML</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 10%;">
-                    ~10%
+                  <div class="progress-bar" style="width: 60%;">
+                    60%
                   </div>
                 </div>
                 <p>CSS</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 20%;">
-                    ~20%
-                  </div>
-                </div>
-                <p>Sql</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 10%;">
-                    ~10%
+                  <div class="progress-bar" style="width: 80%;">
+                    80%
                   </div>
                 </div>
                 <p>Photoshop</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 30%;">
-                    ~30%
+                    30%
+                  </div>
+                </div>
+				<p>UX Design</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 50%;">
+                    50%
                   </div>
                 </div>
                 <p>Web developping</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    ~30%
+                  <div class="progress-bar" style="width: 100%;">
+                    100%
+                  </div>
+                </div>
+				<p>Devops {Git, SVN, TFS}</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 100%;">
+                    100%
                   </div>
                 </div>
                 <p>Reverse Engeenering Knownledge</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    ~30%
+                  <div class="progress-bar" style="width: 60%;">
+                    60%
+                  </div>
+                </div>
+				<p>Web Security</p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 60%;">
+                    60%
                   </div>
                 </div>
                 <p>C/C++</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 20%;">
-                    ~20%
+                    20%
                   </div>
                 </div>
                 <p>IT as Job</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 70%;">
-                    ~70%
-                  </div>
-                </div>
-                <p>Web Security</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    ~30%
+                  <div class="progress-bar" style="width: 50%;">
+                    50%
                   </div>
                 </div>
               </div>
