--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="about-content">
                   Hello, My Name Is Mohssine EL HARFI (often i use The-Morpher as Nickname) a lambda person living in Morocco, love coding especially in games environment or Desktop/Web application.
                   <div class="about-content-sub">
-                    My favorites languages is C# and ... well in reality i focused a couples of years coding around C# environment as Windows Forms App, Windows Desktop App, Libraries, ASP .Net Core 2 and 3, Visual studio features annd arround .net echosystem.  
+                    My favorites languages is C# and ... well in reality i focused a couples of years coding around C# environment as Windows Forms App, Windows Desktop App, Libraries, ASP .Net Core 2 and 3, Visual studio features annd arround .net echosystem since 2009.  
                   </div>
                   <div class="about-content-sub">
                     Over the time i lose hand over some technologies like PHP, C++, VB that i don't use them often.
@@ -91,7 +91,7 @@
                     My Job "Developper"
                   </div>
                   <div class="about-content-job">
-                    I work as Developper in hospitality environment since 2009, most of skills needed :<br>
+                    I work as Developper in hospitality environment, most of skills needed :<br>
                     Software developpement.<br>
 					Softeware Architecture.<br>
 					Storage, Database, logging.<br>
