--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					Technical concerns.<br>
 					Deployement, versionning, testing.<br>
 				  <div class="about-content-job-title" style="color: darkcyan;">
-                    Parallel Job/Knownledge : "IT"
+                    Previouse Job Knownledge/Experience : "IT"
                   </div>
                     Router/Switch L1/L2/L3 supervising/configuring.<br>
                     Sharing devcies, printers, files and users permissions.<br>
